--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "@mui/system": "^5.14.16",
-    "@pdfme/common": "^3.0.0-beta.1",
-    "@pdfme/generator": "^3.0.0-beta.1",
+    "@pdfme/common": "^2.2.1",
+    "@pdfme/generator": "^2.2.1",
     "@pdfme/schemas": "^2.2.1",
     "@pdfme/ui": "^2.2.1",
     "@react-pdf-viewer/core": "^3.12.0",
